add swagger and adjustment some method