@@ -4,33 +4,39 @@ import com.example.bookmanagementperqara.book.dto.BookRequestDto;
 import com.example.bookmanagementperqara.book.dto.BookResponseDto;
 import com.example.bookmanagementperqara.book.entity.BookEntity;
 import com.example.bookmanagementperqara.book.repository.BookRepository;
-import lombok.AllArgsConstructor;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.validation.annotation.Validated;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
+@Validated
+@RequiredArgsConstructor
 public class BookManagementService {
     private final BookRepository bookRepository;
 
     public List<BookResponseDto> getAllBook() {
         List<BookEntity> books = bookRepository.findAll();
-        return books.stream().map(this::convertToResponseDto).toList();
+        return books.stream().map(this::convertToResponseDto).collect(Collectors.toList());
     }
 
     public BookResponseDto getBookById(Long id) {
-        BookEntity book = bookRepository.findById(id).orElseThrow(() -> new RuntimeException("Book not found"));
+        BookEntity book = bookRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Book not found"));
         return convertToResponseDto(book);
     }
 
-    public BookResponseDto createBook(BookRequestDto requestDto) {
+    public BookResponseDto createBook(@Valid BookRequestDto requestDto) {
         BookEntity book = BookEntity.builder()
                 .title(requestDto.getTitle())
                 .author(requestDto.getAuthor())
                 .description(requestDto.getDescription())
                 .category(requestDto.getCategory())
+                .price(requestDto.getPrice())
                 .isDeleted(false)
                 .createdAt(LocalDateTime.now())
                 .build();
@@ -39,11 +45,12 @@ public class BookManagementService {
     }
 
     public BookResponseDto updateBook(Long id, BookRequestDto requestDto) {
-        BookEntity bookToUpdate = bookRepository.findById(id).orElseThrow(() -> new RuntimeException("Book not found"));
+        BookEntity bookToUpdate = bookRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Book not found"));
         bookToUpdate.setTitle(requestDto.getTitle());
         bookToUpdate.setAuthor(requestDto.getAuthor());
         bookToUpdate.setDescription(requestDto.getDescription());
         bookToUpdate.setCategory(requestDto.getCategory());
+        bookToUpdate.setPrice(requestDto.getPrice());
         bookToUpdate.setUpdatedAt(LocalDateTime.now());
 
         BookEntity updatedBook = bookRepository.save(bookToUpdate);
@@ -51,9 +58,9 @@ public class BookManagementService {
     }
 
     public void deleteBook(Long id) {
-        BookEntity bookToDelete = bookRepository.findById(id).orElseThrow(() -> new RuntimeException("Book not found"));
+        BookEntity bookToDelete = bookRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Book not found"));
         bookToDelete.setDeletedAt(LocalDateTime.now());
-        bookToDelete.setDeleted(true);
+        bookToDelete.setIsDeleted(true);
         bookRepository.save(bookToDelete);
     }
 
@@ -64,7 +71,8 @@ public class BookManagementService {
         bookResponseDto.setAuthor(book.getAuthor());
         bookResponseDto.setDescription(book.getDescription());
         bookResponseDto.setCategory(book.getCategory());
-        bookResponseDto.setIsDeleted(book.isDeleted());
+        bookResponseDto.setIsDeleted(book.getIsDeleted());
+        bookResponseDto.setPrice(book.getPrice());
         return bookResponseDto;
     }
 }
